logs/bbvisa2ofx.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bbvisa2ofx'...
Compiling './lib/python3.5/site-packages/bbvisa2ofx/bbvisa2ofx.py'...
***   File "./lib/python3.5/site-packages/bbvisa2ofx/bbvisa2ofx.py", line 108
    print "Convertido com sucesso!"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bbvisa2ofx/test'...
Compiling './lib/python3.5/site-packages/bbvisa2ofx/test/txtparser.py'...
***   File "./lib/python3.5/site-packages/bbvisa2ofx/test/txtparser.py", line 43
    self.parser.dueDate = datetime.datetime(2011,07,25)
                                                  ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/bbvisa2ofx/txtparser.py'...
***   File "./lib/python3.5/site-packages/bbvisa2ofx/txtparser.py", line 63
    print "Due date line found. %s" % line
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bbvisa2ofx-0.21.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
